# errors

./: .gitignore  .gitlab-ci.yml  .luacheckrc  .luacov  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.coverage  Makefile  README.md  config.ld  docker-compose.yml  errors-2.1.2-1.rockspec  errors-scm-1.rockspec  errors.lua  perftest.lua  release.sh  taptest.lua  test.lua
.github/workflows/: publish.yml  test.yml
cmake/: FindLdoc.cmake
errors/: deprecate.lua  version.lua
test/: class_test.lua  deprecate_test.lua  errors_test.lua  helper.lua  test_class.lua  test_deprecate.lua  test_errors.lua
test/unit/: deprecate_test.lua  errors_test.lua  netbox_test.lua
